Added needed and missing dependency